# holyc-ide

./: .gitignore  README.md  gradle.properties  mkicon.py  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/holyc/: CodeEditor.java  EditorActivity.java  Examples.java  FileAdapter.java  Files.java  HolyCRuntime.java  MainActivity.java  OutputActivity.java
app/src/main/jni/: CMakeLists.txt  ast.h  bridge.c  codegen.S  compiler.c  lexer.S  parser.S  runtime.S
app/src/main/res/drawable/: badge_bg.xml
app/src/main/res/layout/: activity_editor.xml  activity_main.xml  activity_output.xml  list_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
test/: test_codegen.c  test_lex.c  test_parse.c
